Closed Bug 394752 Opened 18 years ago Closed 18 years ago

Caret stands still when moving with the arrow key between lines in a pre block

Categories

(Core :: DOM: Selection, defect, P3)

x86
Windows XP
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: martijn.martijn, Assigned: roc)

References

Details

(Keywords: regression, testcase)

Attachments

(2 files)

Attached file testcase
See testcase, to reproduce the bug: To reproduce: - Turn caret browsing on - Move the caret in 'aaaa' and press the arrow right key to go to 'bbbb' - You should not 'stand still' with the caret when moving to the new line in 'bbbb' When the caret is just after 'aaaa', but still on the 'aaaa' line, pressing the right arrow key doesn't move it to the next line, you need to press the right arrow key a second time for that. This regressed between 2007-06-20 and 2007-06-21, so I guess a regression from bug 367177, somehow.
Still happens in current trunk build.
Assignee: nobody → roc
Flags: blocking1.9?
I'd like to land the fix in bug 336408 before working on this.
Depends on: 336408
Whiteboard: [depends on 336408]
Flags: blocking1.9? → blocking1.9+
Attached patch fixSplinter Review
We just need to skip over preformatted newlines. As indicated in the testcase, our caret code will put the caret at the end of the first line by positioning it at the start of the second line and setting HINTLEFT to indicate that the caret is associated with the content before its position.
Attachment #288425 - Flags: review?(smontagu)
Whiteboard: [depends on 336408] → [needs review]
Attachment #288425 - Flags: review?(smontagu) → review+
checked in
Status: NEW → RESOLVED
Closed: 18 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Whiteboard: [needs review]
Verified fixed, using: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b2pre) Gecko/2007111605 Minefield/3.0b2pre
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: