Bug 394752. Skip over preformatted newlines when moving caret; the caret will appear at the end of a line when it is positioned at the start of the next line with a HINTLEFT. r=smontagu